--- a/.github/workflows/daily-email.yml
+++ b/.github/workflows/daily-email.yml
@@ -1,83 +1,66 @@
-- name: Send daily notification
+name: AI News Daily Notification
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '30 23 * * *' # 北京时间 07:30
+
+jobs:
+  send-notification:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Send daily notification
         env:
           SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
         run: |
-          echo "AI News Radar Daily Notification"
-          echo "=================================="
-          echo "时间: $(date '+%Y-%m-%d %H:%M:%S') UTC"
-          echo "北京时间: $(TZ='Asia/Shanghai' date '+%Y-%m-%d %H:%M:%S')"
-
           python3 << 'EOF'
           import os, smtplib, datetime
           from email.mime.text import MIMEText
 
-          # 获取配置
+          # 1. 获取环境变量
           SMTP_SERVER = os.getenv('SMTP_SERVER', '')
           SMTP_PASSWORD = os.getenv('SMTP_PASSWORD', '')
           SENDER_EMAIL = os.getenv('SENDER_EMAIL', '')
           RECEIVER_EMAIL = os.getenv('RECEIVER_EMAIL', '')
 
-          print(f'✔ SMTP服务器: {SMTP_SERVER}')
-          print(f'✔ 发件邮箱: {SENDER_EMAIL}')
-
           if not all([SMTP_SERVER, SMTP_PASSWORD, SENDER_EMAIL, RECEIVER_EMAIL]):
-              print('⚠ 缺失必要配置')
+              print("❌ 缺失 Secrets 配置，请在 Settings -> Secrets 中检查")
               exit(1)
 
-          # 构建邮件内容
+          # 2. 构建邮件正文
           today = datetime.datetime.now().strftime("%Y-%m-%d")
-          today_cn = datetime.datetime.now().astimezone(
-              datetime.timezone(datetime.timedelta(hours=8))
-          ).strftime("%Y-%m-%d %H:%M:%S")
-
-          subject = f"AI新闻雷达日报 - {today}"
           body = f"""AI新闻雷达日报
           =============
-
           📅 日期：{today}
-          🕒 北京时间：{today_cn}
-
-          🎯 系统状态通知
-          您的AI新闻雷达系统正常运行。
-
-          💡 今日概况：
-          • 邮件推送服务：在线 ✓
-          • 自动调度系统：启用 ✓
-          • SMTP邮件服务：正常 ✓
-          • 下一次推送：明日07:30
-
-          📊 运行统计：
-          • 成功率：正常
-          • 自动调度：运行中
-
-          感谢使用AI新闻雷达服务！
-
-          --
-          AI News Radar 自动系统
+          🎯 系统状态：正常运行中
+          
+          提示：这是一条自动生成的系统状态通知。
           """
 
+          # 3. 发送邮件
           try:
               msg = MIMEText(body, 'plain', 'utf-8')
-              msg['Subject'] = subject
-              msg['From'] = f'AI新闻雷达 <{SENDER_EMAIL}>'
+              msg['Subject'] = f"AI新闻雷达日报 - {today}"
+              msg['From'] = f"AI News Radar <{SENDER_EMAIL}>"
               msg['To'] = RECEIVER_EMAIL
 
-              print(f'📧 正在发送邮件至: {RECEIVER_EMAIL}')
-
-              # 使用 587 端口配 STARTTLS 是标准做法
               server = smtplib.SMTP(SMTP_SERVER, 587, timeout=15)
               server.starttls()
               server.login(SENDER_EMAIL, SMTP_PASSWORD)
               server.send_message(msg)
               server.quit()
-
-              print('🎉 日报邮件发送成功！')
+              print("✅ 邮件发送成功！")
           except Exception as e:
-              print(f'❌ 发送失败: {str(e)}')
+              print(f"❌ 发送失败: {e}")
               exit(1)
           EOF
-          
-          echo "✅ 流程执行完成"
